Fix stretched image bug

--- a/staticfiles/static/css/images.css
+++ b/staticfiles/static/css/images.css
@@ -68,7 +68,7 @@
 
 @media only screen and (max-width: 600px) {
     #sizingNoticeBoard {
-        height: 100vh;
+        width: 100vw;
         margin:0px;
         margin-bottom:20px;
         padding: 0px;
